# databridge-cli

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  ME_AUDIT.md  PRODUCT.md  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample.config.yml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.impeccable/: design.json
deploy/: Caddyfile
docs/: CONTRIBUTING.md  DEPLOY.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js
migrations/: env.py  script.py.mako
scripts/: capture.cjs  dev.sh  serve.sh  smoke_prompts.py
tests/: conftest.py  test_ai_verification.py  test_ask_api.py  test_ask_engine.py  test_ask_examples.py  test_auth.py  test_base_tables_api.py  test_bootstrap.py  test_bootstrap_workspace.py  test_bridge.py  test_build_report_outputs.py  test_build_report_smoke.py  test_chart_suggester.py  test_charts_multiform.py  test_classifier.py  test_compare_report_smoke.py  test_config_db_api.py  test_config_db_sync.py  test_data_quality.py  test_data_quality_api.py  test_db_models.py  test_default_charts.py  test_export_json.py  test_export_pii.py  test_export_sql.py  test_extract_multiform.py  test_filter_safety.py  test_flatten.py  test_framework.py  test_framework_e2e.py  test_framework_endpoint.py  test_generation_language.py  test_guard_branch.py  test_guard_ready.py  (+77 more)
(+267 files in other folders)
