[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kobo-reporter"
version = "0.1.0"
description = "CLI + web tool to fetch Kobo/Ona survey data and generate Word reports."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "squarify>=0.4.3",
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "click>=8.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
db = ["sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0", "pymysql>=1.1.0", "supabase>=2.0.0"]
maps = ["contextily>=1.6.0", "pyproj>=3.6.0"]
ai-openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0", "responses>=0.25.0", "sqlalchemy>=2.0.0"]

[project.scripts]
kobo-reporter = "src.data.make:cli"

[tool.setuptools.packages.find]
include = ["src*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
